# DroneSwarm

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  read_stream.py  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
3DModels/: BodyDrone v10.stl  BottomCameraRetainer.stl  ChipsRetainer.stl  TopCameraRetainer.stl  mini_columns.stl
cmake/: asio.cmake  eigen.cmake
led_detection/: LedDetection.py
libs/rknn_api/include/: rknn_api.h
scripts/: LedDetection.py  calibrate.py  display.py  display_rgb_tensor.py  export_led_detector.py  extractor.py  main.py  png_to_jpg.sh  pointmap.py  postproc_scoremap.py  read_stream.py  render_keypoints.py  stream.py  stream2.py  stream3.py  test_orb.py  utils.py
scripts/calibration/20241203_130810/: camera_matrix.npy  distortion_coefficients.npy  rotation_vectors.npy  translation_vectors.txt.npy
scripts/calibration/20241206_215259/: camera_matrix.npy  camera_matrix.txt  distortion_coefficients.npy  distortion_coefficients.txt  rotation_vectors.npy  translation_vectors.npy
scripts/slam/: app.py  readers.py  slam.py  test_network.py  visualizer.py
src/control/: CMakeLists.txt
src/control/include/: master.hpp  worker.hpp
src/control/src/: master_main.cpp  worker_main.cpp
src/led_detection/: LedDetection.py  to_pt.py
src/media/: CMakeLists.txt  media_test.cpp  vi_venc_h264.cpp  vi_venc_jpeg.cpp
src/media/camera/: camera.cpp  camera.hpp
src/media/libs/led/include/: led_detection.hpp
src/media/src/: media_test.cpp  vi_rga_bin.cpp  vi_rga_led.cpp  vi_rknn_venc_rtsp.cpp  vi_venc_h264.cpp  vi_venc_jpeg.cpp
src/media/src/camera/: camera.cpp  camera.hpp
src/media/src/common/: core.hpp
src/ml_tools/: CMakeLists.txt
src/ml_tools/src/: alike_infer_test.cpp  detect_keypoints.cpp  eigen_test.cpp  full_pipiline_test.cpp  led_detection.cpp  led_detection.hpp  rknn_api_version.cpp
src/ml_tools/src/alike/: dkd.cpp  dkd.h
src/ml_tools/src/common/: rkmedia_common.h  rkmedia_core.cpp  rkmedia_core.h  rkmedia_utils.cpp  rkmedia_utils.h  rknn_utils.cpp  rknn_utils.h  thread_safe_queue.h
src/network/: CMakeLists.txt
src/network/src/: network_benchmark.cpp
src/slam/: CMakeLists.txt
src/slam/include/: dkd.h  network_module.hpp
src/slam/include/common/: rknn_utils.h  sample_common.h
src/slam/src/: dkd.cpp  network_module.cpp  slam_service.cpp  test_network.cpp
src/telemetry/: CMakeLists.txt
src/telemetry/include/: telemetry_reader.hpp
src/telemetry/src/: telemetry_reader.cpp
src/video-io/: CMakeLists.txt  main.cpp
src/video-io/cmake/: rkaiq.cmake
src/video-io/common/: sample_common.h
